--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -254,7 +254,7 @@
 
           </div>
           <div class="soc">
-            <div>
+            <div class="in">
               <a href="https://www.instagram.com/beauty_room_kamyshin/" target="_blank">
                 <i class="fab fa-instagram social "></i>
               </a>
