--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -710,5 +710,11 @@ ul li i:after {
     justify-content: center;
   }
 }
-
+@media (max-width: 770px) {
+  .in {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: auto;
+  }
+}
 /*end @media*/
