--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -532,7 +532,7 @@ ul li i:after {
 
 /*section services*/
 #section-services {
-  background-color: rgba(0, 0, 0, 0.651);
+  background-color: black;
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
