--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -532,6 +532,7 @@ ul li i:after {
 
 /*section services*/
 #section-services {
+  background-image: url(./images/serv.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
