--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -376,6 +376,7 @@ footer {
   background-position: center;
   background-size: cover;
   background-image: url(./images/fff.jpg);
+  background-attachment: fixed;
 }
 .onas {
   margin-top: 70px;
@@ -389,6 +390,7 @@ footer {
   background-position: center;
   background-size: cover;
   background-image: url(./images/mm.jpg);
+  background-attachment: fixed;
   color: black;
   margin: 1%;
 }
@@ -505,9 +507,10 @@ ul li i:after {
 /*section gallery*/
 #section-gallery {
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center;
   background-size: cover;
   background-image: url(./images/mmmmm.jpg);
+  background-attachment: fixed;
   color: #eee;
   margin: 1%;
 }
@@ -534,7 +537,7 @@ ul li i:after {
 #section-services {
   background-image: url(./images/serv.jpg);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center;
   background-size: cover;
   background-attachment: fixed;
   color: #eee;
