--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -534,7 +534,7 @@ ul li i:after {
 #section-services {
   background-image: url(./images/serv.jpg);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center center;
   background-size: cover;
 
   color: #eee;
