--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -736,12 +736,7 @@ ul li i:after {
 }
 @media (max-width: 560px) {
   #section-services {
-    background-image: url(./images/serv.jpg);
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
-    color: #eee;
-    margin: 1%;
+    position: absolute;
   }
 }
 
