--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -389,8 +389,15 @@ footer {
   background-position: center;
   background-size: cover;
   background-image: url(./images/mm.jpg);
+  background-attachment: fixed;
+  transform: scale(1.1, 1.1);
   color: black;
   margin: 1%;
+}
+@media only screen and (max-width: 768px) {
+  #section-prices {
+    background-size: 100% 100vh;
+  }
 }
 .container_prices {
   display: grid;
