--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -393,6 +393,11 @@ footer {
   color: black;
   margin: 1%;
 }
+@media (max-width: 560px) {
+  #section-prices {
+    background-attachment: local;
+  }
+}
 
 .container_prices {
   display: grid;
