--- a/app/templates/ffot/foot.html
+++ b/app/templates/ffot/foot.html
@@ -1,5 +1,5 @@
 <div class="container text-center text-muted">
-  &copy; 2018&ndash;{{ current_year }} Copyrights info
+  &copy; 2018&ndash;{{ current_year }} Студия красоты "Beauty Room"г.Камышин
 </div>
 <div
   class="modal fade"
