--- a/app/templates/includes/site_verification.html
+++ b/app/templates/includes/site_verification.html
@@ -1,1 +1,2 @@
 <meta name="yandex-verification" content="e7813c16c95e8805" />
+<meta name="google-site-verification" content="google18f1719e18bf8fd4" />
