--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -40,7 +40,7 @@
 
   {% if gallery %}
 </section>
-<section id="section-services" class="section-common">
+<!--<section id="section-services" class="section-common">
   <div class="section-common__tit container ">
     <h2 class="ivi">Услуги</h2>
   </div>
@@ -67,7 +67,7 @@
     
     </div>
   </div>
-</section>
+</section>-->
 
 <section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
