--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -69,7 +69,7 @@
   </div>
 </section>-->
 
-<section id="section-gallery" class="section-common ">
+<!--<section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
     <h2>Фотогалерея</h2>
   </div>
@@ -220,7 +220,7 @@
       </div>
     </div>
     </divc>
-</section>
+</section>-->
 
 <!--<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
   <div class="text-call ">
