--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -40,7 +40,7 @@
 
   {% if gallery %}
 </section>
-<!--<section id="section-services" class="section-common">
+<section id="section-services" class="section-common">
   <div class="section-common__tit container ">
     <h2 class="ivi">Услуги</h2>
   </div>
@@ -69,7 +69,7 @@
   </div>
 </section>-->
 
-<!--<section id="section-gallery" class="section-common ">
+<section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
     <h2>Фотогалерея</h2>
   </div>
@@ -98,10 +98,10 @@
     </div>
   </div>
   </div>
-</section>-->
+</section>
 {% endif %}
 
-<section id="section-prices" class="section-common ">
+<!--<section id="section-prices" class="section-common ">
   <div class="container">
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
@@ -220,7 +220,7 @@
       </div>
     </div>
     </divc>
-</section>
+</section>-->
 
 <!--<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
   <div class="text-call ">
