--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -101,7 +101,7 @@
 </section>
 {% endif %}
 
-<!--<section id="section-prices" class="section-common ">
+<section id="section-prices" class="section-common ">
   <div class="container">
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
@@ -219,8 +219,8 @@
 
       </div>
     </div>
-    </divc>
-</section>-->
+    </div>
+</section>
 
 <!--<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
   <div class="text-call ">
