--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -101,10 +101,10 @@
 </section>
 {% endif %}
 
-<section id="section-prices" class="section-common ">
+<section id="section-services" class="section-common ">
   <div class="container">
     <div class="row featurette">
-      <div class="col-md-6 order-md-2">
+      <div class="col-md-6 order-md-2 wow zoomIn " data-wow-delay="0.1s">
         <h2 class="featurette-heading text-center">Прайс</h2>
         <div class="container_prices wow zoomIn ">
           <ul>
@@ -209,17 +209,16 @@
 
         </div>
       </div>
-      <div class="col-md-6 ">
-        <div class="img   ">
-          <img class="imgn img-fluid yslugi" width="500" height="400"
-            src="{{ url_for('static', filename='css/images/pr.jpg') }}" alt="">
+      <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
+        <div class="img  ">
+          <img class="imgn img-fluid onas" width="500" height="400"
+            src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
         <rect fill="#eee" width="100%" height="100%" />
-
       </div>
     </div>
-    </div>
+  </div>
 </section>
 
 <!--<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
