--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -523,6 +523,10 @@ ul li i:after {
     transform: rotateX(0deg);
   }
 }
+input {
+  width: 700px;
+  height: 600px;
+}
 /*end section prices*/
 
 /*section gallery*/
