--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -105,7 +105,7 @@
       <h2>Цены</h2>
   </div>
   <div class="section-common__content container">
-      
+     <div class="container"> 
     
       <ul>
         <li>
@@ -206,6 +206,7 @@
           </p>
         </li>
       </ul>
+    </div>
 
     
   </div>
