--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -106,8 +106,14 @@
   </div>
   <div class="section-common__content container">
      <div class="container"> 
+       <h2>fgfgf</h2>
+       <h2>fgfgfg</h2>
+       <h2>fggf</h2>
+       <h2>fgfgf</h2>
+       <h2>ffgfg</h2>
+       <h2>fgfgfgf</h2>
     
-      <ul>
+     <!---- <ul>
         <li>
           <input type="checkbox" checked>
           <i></i>
@@ -205,7 +211,7 @@
             250р.<br>
           </p>
         </li>
-      </ul>
+      </ul>-->
     </div>
 
     
