--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -111,70 +111,123 @@
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-              Collapsible Group 1</a>
+              Маникюр</a>
             </h4>
           </div>
           <div id="collapse1" class="panel-collapse collapse in">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</div>
+            <div class="panel-body">
+              <p class="font text-center  ">
+                Ремонт ногтя <br>
+                50р<br>
+                Дизайн(геометрия,вензеля,рисунок) <br>
+                25р<br>
+                Френч <br>
+                100р<br>
+                Лунки/втирка на все ногти <br>
+                150р<br>
+                Стразы <br>
+                25р.<br>
+                Наращивание ногтей <br>
+                1200р.<br>
+                Корекция/укрепление твердым гелем <br>
+                800р.<br>
+                Корекция/укрепление гель-лаком <br>
+                700р.</p><br>
+            </div>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-              Collapsible Group 2</a>
+              Парикмахерские услуги</a>
             </h4>
           </div>
           <div id="collapse2" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</div>
+            <div class="panel-body">
+              <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
+                2200р.<br>
+                Стрижка модельная <br>
+                300р<br>
+                Стрижка креативная<br>
+                400р<br>
+                Стрижка на волосы средней длины <br>
+                350р.><br>
+                Стрижка на волосы средней длины<br>
+                450р.<br></p>
+            </div>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-              Collapsible Group 3</a>
+              Эстетическая косметология</a>
             </h4>
           </div>
           <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</div>
+            <div class="panel-body">
+              <p class="font text-center">
+                Чистка лица<br>
+                1300р.<br>
+                Мультивитаминный уход <br>
+                800р.<br>
+                Детокс кожи лица <br>
+                1000р.<br>
+                Альгинатная маска <br>
+                1000р.<br>
+              </p>
+            </div>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-              Collapsible Group 4</a>
+              Макияж</a>
             </h4>
           </div>
           <div id="collapse4" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</div>
+            <div class="panel-body">
+              <p class="font text-center">
+                Макияж дневной <br>
+                1300р.<br>
+                Макияж вечерний <br>
+                1500р.<br>
+                Макияж свадебный/выпускной<br>
+                1700р.<br>
+                Макияж пробный <br>
+                1200р.<br>
+              </p>
+            </div>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-              Collapsible Group 5</a>
+              Косметология</a>
             </h4>
           </div>
           <div id="collapse5" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</div>
+            <div class="panel-body">
+              <p class=" font text-center">
+                Подмышечные впадины <br>
+                300р.<br>
+                Класическое бикини <br>
+                450р.<br>
+                Глубокое бикини <br>
+                700р.<br>
+                Депиляция ног <br>
+                590р.<br>
+                Депиляция лица <br>
+                100р.<br>
+                Депиляция рук <br>
+                350р.<br>
+                Парафинотерапия руг/ног <br>
+                250р.<br>
+              </p>
+            </div>
           </div>
         </div>
       </div>
