--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -425,7 +425,7 @@ footer {
 }
 #accordion {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   justify-content: center;
 }
 .dropdown-pt {
