--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -106,131 +106,126 @@
   </div>
   <div class="section-common__content container">
      <div class="container"> 
-      <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-              Маникюр</a>
-            </h4>
-          </div>
-          <div id="collapse1" class="panel-collapse collapse in">
-            <div class="panel-body">
-              <p class="font text-center  ">
-                Ремонт ногтя <br>
-                50р<br>
-                Дизайн(геометрия,вензеля,рисунок) <br>
-                25р<br>
-                Френч <br>
-                100р<br>
-                Лунки/втирка на все ногти <br>
-                150р<br>
-                Стразы <br>
-                25р.<br>
-                Наращивание ногтей <br>
-                1200р.<br>
-                Корекция/укрепление твердым гелем <br>
-                800р.<br>
-                Корекция/укрепление гель-лаком <br>
-                700р.</p><br>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-              Парикмахерские услуги</a>
-            </h4>
-          </div>
-          <div id="collapse2" class="panel-collapse collapse">
-            <div class="panel-body">
-              <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
-                2200р.<br>
-                Стрижка модельная <br>
-                300р<br>
-                Стрижка креативная<br>
-                400р<br>
-                Стрижка на волосы средней длины <br>
-                350р.><br>
-                Стрижка на волосы средней длины<br>
-                450р.<br></p>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-              Эстетическая косметология</a>
-            </h4>
-          </div>
-          <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">
-              <p class="font text-center">
-                Чистка лица<br>
-                1300р.<br>
-                Мультивитаминный уход <br>
-                800р.<br>
-                Детокс кожи лица <br>
-                1000р.<br>
-                Альгинатная маска <br>
-                1000р.<br>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-              Макияж</a>
-            </h4>
-          </div>
-          <div id="collapse4" class="panel-collapse collapse">
-            <div class="panel-body">
-              <p class="font text-center">
-                Макияж дневной <br>
-                1300р.<br>
-                Макияж вечерний <br>
-                1500р.<br>
-                Макияж свадебный/выпускной<br>
-                1700р.<br>
-                Макияж пробный <br>
-                1200р.<br>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-              Косметология</a>
-            </h4>
-          </div>
-          <div id="collapse5" class="panel-collapse collapse">
-            <div class="panel-body">
-              <p class=" font text-center">
-                Подмышечные впадины <br>
-                300р.<br>
-                Класическое бикини <br>
-                450р.<br>
-                Глубокое бикини <br>
-                700р.<br>
-                Депиляция ног <br>
-                590р.<br>
-                Депиляция лица <br>
-                100р.<br>
-                Депиляция рук <br>
-                350р.<br>
-                Парафинотерапия руг/ног <br>
-                250р.<br>
-              </p>
-            </div>
-          </div>
-        </div>
+     
+      <!--Accordion wrapper-->
+<div class="accordion md-accordion" id="accordionEx1" role="tablist" aria-multiselectable="true">
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    <!-- Card header -->
+    <div class="card-header" role="tab" id="headingTwo1">
+      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseTwo1"
+        aria-expanded="false" aria-controls="collapseTwo1">
+        <h5 class="mb-0">
+          Collapsible Group Item #1 <i class="fas fa-angle-down rotate-icon"></i>
+        </h5>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1"
+      data-parent="#accordionEx1">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+        wolf
+        moon
+        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+        Brunch
+        3
+        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+        shoreditch
+        et.
+        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+        Ad
+        vegan
+        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+        nesciunt
+        you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
+    </div>
+
+  </div>
+  <!-- Accordion card -->
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    <!-- Card header -->
+    <div class="card-header" role="tab" id="headingTwo2">
+      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseTwo21"
+        aria-expanded="false" aria-controls="collapseTwo21">
+        <h5 class="mb-0">
+          Collapsible Group Item #2 <i class="fas fa-angle-down rotate-icon"></i>
+        </h5>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapseTwo21" class="collapse" role="tabpanel" aria-labelledby="headingTwo21"
+      data-parent="#accordionEx1">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+        wolf
+        moon
+        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+        Brunch
+        3
+        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+        shoreditch
+        et.
+        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+        Ad
+        vegan
+        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+        nesciunt
+        you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+
+  </div>
+  <!-- Accordion card -->
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    <!-- Card header -->
+    <div class="card-header" role="tab" id="headingThree31">
+      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseThree31"
+        aria-expanded="false" aria-controls="collapseThree31">
+        <h5 class="mb-0">
+          Collapsible Group Item #3 <i class="fas fa-angle-down rotate-icon"></i>
+        </h5>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapseThree31" class="collapse" role="tabpanel" aria-labelledby="headingThree31"
+      data-parent="#accordionEx1">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+        wolf
+        moon
+        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+        Brunch
+        3
+        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+        shoreditch
+        et.
+        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+        Ad
+        vegan
+        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+        nesciunt
+        you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+
+  </div>
+  <!-- Accordion card -->
+
+</div>
+<!-- Accordion wrapper -->
     
      <!-- <ul>
         <li>
