--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -107,122 +107,68 @@
   <div class="section-common__content container">
      <div class="container"> 
      
-      <!--Accordion wrapper-->
-<div class="accordion md-accordion" id="accordionEx1" role="tablist" aria-multiselectable="true">
-
-  <!-- Accordion card -->
-  <div class="card">
-
-    <!-- Card header -->
-    <div class="card-header" role="tab" id="headingTwo1">
-      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseTwo1"
-        aria-expanded="false" aria-controls="collapseTwo1">
-        <h5 class="mb-0">
-          Collapsible Group Item #1 <i class="fas fa-angle-down rotate-icon"></i>
-        </h5>
-      </a>
-    </div>
-
-    <!-- Card body -->
-    <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1"
-      data-parent="#accordionEx1">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-        wolf
-        moon
-        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-        Brunch
-        3
-        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-        shoreditch
-        et.
-        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-        Ad
-        vegan
-        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
-        nesciunt
-        you probably haven't heard of them accusamus labore sustainable VHS.
+      <button class="accordion">Section 1</button>
+      <div class="panel">
+        <p><p class="font text-center  ">
+          Ремонт ногтя <br>
+          50р<br>
+          Дизайн(геометрия,вензеля,рисунок) <br>
+          25р<br>
+          Френч <br>
+          100р<br>
+          Лунки/втирка на все ногти <br>
+          150р<br>
+          Стразы <br>
+          25р.<br>
+          Наращивание ногтей <br>
+          1200р.<br>
+          Корекция/укрепление твердым гелем <br>
+          800р.<br>
+          Корекция/укрепление гель-лаком <br>
+          700р.</p><br></p>
       </div>
-    </div>
-
-  </div>
-  <!-- Accordion card -->
-
-  <!-- Accordion card -->
-  <div class="card">
-
-    <!-- Card header -->
-    <div class="card-header" role="tab" id="headingTwo2">
-      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseTwo21"
-        aria-expanded="false" aria-controls="collapseTwo21">
-        <h5 class="mb-0">
-          Collapsible Group Item #2 <i class="fas fa-angle-down rotate-icon"></i>
-        </h5>
-      </a>
-    </div>
-
-    <!-- Card body -->
-    <div id="collapseTwo21" class="collapse" role="tabpanel" aria-labelledby="headingTwo21"
-      data-parent="#accordionEx1">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-        wolf
-        moon
-        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-        Brunch
-        3
-        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-        shoreditch
-        et.
-        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-        Ad
-        vegan
-        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
-        nesciunt
-        you probably haven't heard of them accusamus labore sustainable VHS.
+      
+      <button class="accordion">Section 2</button>
+      <div class="panel">
+        <p><p class="font text-center  ">
+          Ремонт ногтя <br>
+          50р<br>
+          Дизайн(геометрия,вензеля,рисунок) <br>
+          25р<br>
+          Френч <br>
+          100р<br>
+          Лунки/втирка на все ногти <br>
+          150р<br>
+          Стразы <br>
+          25р.<br>
+          Наращивание ногтей <br>
+          1200р.<br>
+          Корекция/укрепление твердым гелем <br>
+          800р.<br>
+          Корекция/укрепление гель-лаком <br>
+          700р.</p><br></p>
       </div>
-    </div>
-
-  </div>
-  <!-- Accordion card -->
-
-  <!-- Accordion card -->
-  <div class="card">
-
-    <!-- Card header -->
-    <div class="card-header" role="tab" id="headingThree31">
-      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseThree31"
-        aria-expanded="false" aria-controls="collapseThree31">
-        <h5 class="mb-0">
-          Collapsible Group Item #3 <i class="fas fa-angle-down rotate-icon"></i>
-        </h5>
-      </a>
-    </div>
-
-    <!-- Card body -->
-    <div id="collapseThree31" class="collapse" role="tabpanel" aria-labelledby="headingThree31"
-      data-parent="#accordionEx1">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-        wolf
-        moon
-        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-        Brunch
-        3
-        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-        shoreditch
-        et.
-        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-        Ad
-        vegan
-        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
-        nesciunt
-        you probably haven't heard of them accusamus labore sustainable VHS.
+      
+      <button class="accordion">Section 3</button>
+      <div class="panel">
+        <p><p class="font text-center  ">
+          Ремонт ногтя <br>
+          50р<br>
+          Дизайн(геометрия,вензеля,рисунок) <br>
+          25р<br>
+          Френч <br>
+          100р<br>
+          Лунки/втирка на все ногти <br>
+          150р<br>
+          Стразы <br>
+          25р.<br>
+          Наращивание ногтей <br>
+          1200р.<br>
+          Корекция/укрепление твердым гелем <br>
+          800р.<br>
+          Корекция/укрепление гель-лаком <br>
+          700р.</p><br></p>
       </div>
-    </div>
-
-  </div>
-  <!-- Accordion card -->
 
 </div>
 <!-- Accordion wrapper -->
