--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -107,8 +107,38 @@
   <div class="section-common__content container">
      <div class="container"> 
      
-      <button class="accordion">Section 1</button>
-      <div class="panel">
+      <ul class="duthoning">
+        <li>
+        <button class="koducion-mautegad"><h2>ZorNet.Ru — сайт для Вебмастер</h2></button>
+        <div class="mesiten-senaple">
+          <p class="font text-center  ">
+            Ремонт ногтя <br>
+            50р<br>
+            Дизайн(геометрия,вензеля,рисунок) <br>
+            25р<br>
+            Френч <br>
+            100р<br>
+            Лунки/втирка на все ногти <br>
+            150р<br>
+            Стразы <br>
+            25р.<br>
+            Наращивание ногтей <br>
+            1200р.<br>
+            Корекция/укрепление твердым гелем <br>
+            800р.<br>
+            Корекция/укрепление гель-лаком <br>
+            700р.</p>
+        </div>
+        </li>
+        <li>
+        <button class="koducion-mautegad"><h2>Web Меню для сайта</h2></button>
+        <div class="mesiten-senaple">
+        
+        </div>
+        </li>
+        <li>
+        <button class="koducion-mautegad"><h2>Всплывающие окна Ajax</h2></button>
+        <div class="mesiten-senaple">
         <p><p class="font text-center  ">
           Ремонт ногтя <br>
           50р<br>
@@ -125,11 +155,13 @@
           Корекция/укрепление твердым гелем <br>
           800р.<br>
           Корекция/укрепление гель-лаком <br>
-          700р.</p><br></p>
-      </div>
-      
-      <button class="accordion">Section 2</button>
-      <div class="panel">
+          700р.</p></p>
+        </div>
+        </li>
+         
+        <li>
+        <button class="koducion-mautegad"><h2>Лицензионные ключи NOD 32 генератор</h2></button>
+        <div class="mesiten-senaple">
         <p><p class="font text-center  ">
           Ремонт ногтя <br>
           50р<br>
@@ -146,28 +178,10 @@
           Корекция/укрепление твердым гелем <br>
           800р.<br>
           Корекция/укрепление гель-лаком <br>
-          700р.</p><br></p>
-      </div>
-      
-      <button class="accordion">Section 3</button>
-      <div class="panel">
-        <p><p class="font text-center  ">
-          Ремонт ногтя <br>
-          50р<br>
-          Дизайн(геометрия,вензеля,рисунок) <br>
-          25р<br>
-          Френч <br>
-          100р<br>
-          Лунки/втирка на все ногти <br>
-          150р<br>
-          Стразы <br>
-          25р.<br>
-          Наращивание ногтей <br>
-          1200р.<br>
-          Корекция/укрепление твердым гелем <br>
-          800р.<br>
-          Корекция/укрепление гель-лаком <br>
-          700р.</p><br></p>
+          700р.</p></p>
+        </div>
+        </li>
+        </ul>
       </div>
 
 </div>
@@ -194,7 +208,7 @@
             Корекция/укрепление твердым гелем <br>
             800р.<br>
             Корекция/укрепление гель-лаком <br>
-            700р.</p><br>
+            700р.</p>
         </li>
         <li>
           <input type="checkbox" checked>
