--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -767,28 +767,70 @@ ul li i:after {
 }
 
 /*end @media*/
-.accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
+p {
+  color: #3c3939;
+  font-size: 18px;
+  line-height: 1.4;
+  margin: 18px;
+  font-family: "Alegreya Sans SC", sans-serif;
+}
+.cipenan-celines {
+  max-width: 640px;
+  margin: 0 auto;
+}
+.duthoning {
+  margin: 90px 0;
+  overflow: hidden;
+  padding: 0;
+}
+.duthoning li {
+  list-style-type: none;
+  padding: 0;
+}
+.koducion-mautegad {
+  background: #fdfdfd;
   border: none;
+  border-bottom: solid 1px #928f8f;
+  cursor: pointer;
+  display: block;
   outline: none;
-  transition: 0.4s;
+  padding: 2em;
+  position: relative;
+  text-align: center;
+  width: 100%;
 }
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active,
-.accordion:hover {
-  background-color: #ccc;
+.koducion-mautegad:before {
+  background: #e20e0e;
+  content: "";
+  height: 2px;
+  margin-right: 37px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: rotate(-90deg);
+  transition: all 0.2s ease-in-out;
+  width: 15px;
 }
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 0 18px;
-  background-color: white;
+.koducion-mautegad:after {
+  background: #e20e0e;
+  content: "";
+  height: 2px;
+  margin-right: 37px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 15px;
+}
+.koducion-mautegad.pevuden:before {
+  transform: rotate(0deg);
+}
+.koducion-mautegad.pevuden h2,
+.koducion-mautegad:focus h2 {
+  position: relative;
+  color: #ff8383;
+}
+.mesiten-senaple {
+  background: #ded9d9;
   display: none;
   overflow: hidden;
 }
