--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -145,6 +145,7 @@
         });
       });
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/navbar-collapse.js') }}"></script>
     {% include 'includes/site_statistics.html' %}
   </body>
